feat: add grid for elements

--- a/perfomance/index.html
+++ b/perfomance/index.html
@@ -53,7 +53,7 @@
           и дорогую. Двухчасовой спектакль в основе которого старинная мистическая история, где правду невозможно
           отличить от вымысла.
         </p>
-        <figure class="article-figure article-figure-horizontal article-figure-wide">
+        <figure class="article-figure article-figure-column article-figure-wide">
           <img class="article-img" src="./assets/2.png" alt="Режиссер Жан Портье" width="380" height="526" />
           <figcaption class="article-figcaption">
             <p>На фото: режиссер Жан Портье на репетиции спектакля «В прошлом году в Монпелье»</p>
@@ -76,7 +76,12 @@
           </figcaption>
         </figure>
         <figure class="article-figure article-figure-wide">
-          <img class="article-img" src="img/4.jpg" width="810" height="438" alt="Сцена объяснения главных героев" />
+          <img
+            class="article-img"
+            src="./assets/4.png"
+            width="810"
+            height="438"
+            alt="Сцена объяснения главных героев" />
           <figcaption class="article-figcaption">
             <p>На фото: главные актеры спектакля Обен Шарль и Мари Брюней</p>
             <p>Фотограф: Пьер Буше</p>
@@ -125,7 +130,7 @@
     </footer>
   </body>
 
-  <svg xmlns="http://www.w3.org/2000/svg">
+  <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
     <symbol id="logo" viewBox="0 0 144 19">
       <path
         d="M0 17.5271C0.529476 17.5108 0.906527 17.4044 1.13115 17.208C1.37182 16.9953 1.52425 16.6925 1.58843 16.2997C1.65261 15.907 1.6847 15.4078 1.6847 14.8023V4.59044C1.6847 3.83764 1.70876 3.1994 1.7569 2.67571C1.48414 2.69208 1.18731 2.70844 0.866415 2.72481C0.545521 2.74117 0.256716 2.75754 0 2.7739V1.42377C1.89328 1.40741 3.85074 1.39104 5.87237 1.37468C8.11863 1.37468 9.85949 1.79199 11.0949 2.62661C12.3464 3.44488 12.9882 4.705 13.0203 6.40698C13.0363 7.04522 12.924 7.70801 12.6834 8.39535C12.4427 9.06632 12.0335 9.69638 11.4559 10.2855C10.8783 10.8583 10.0921 11.3247 9.09736 11.6848C8.10259 12.0448 6.86714 12.2248 5.39103 12.2248C5.23058 12.2412 5.04607 12.2494 4.83749 12.2494C4.64495 12.233 4.44439 12.2248 4.23581 12.2248V15.3178C4.23581 16.2015 4.21174 16.8807 4.16361 17.3553C4.50055 17.3226 4.86958 17.298 5.27069 17.2817C5.67181 17.2653 6.0248 17.2489 6.32965 17.2326V18.6072H0V17.5271ZM4.23581 10.9238C4.49252 10.9565 4.72517 10.9811 4.93375 10.9974C5.14234 10.9974 5.38301 10.9974 5.65577 10.9974C7.00352 10.9974 8.10259 10.621 8.95296 9.86822C9.80333 9.09905 10.2285 8.02713 10.2285 6.65245C10.2285 5.58872 10.0199 4.76227 9.60277 4.17313C9.20165 3.58398 8.66415 3.17485 7.99028 2.94574C7.33244 2.70026 6.61043 2.57752 5.82424 2.57752C5.08618 2.57752 4.63693 2.79845 4.47648 3.24031C4.31603 3.6658 4.23581 4.31223 4.23581 5.17959V10.9238Z"
