--- a/travel-blog/index.html
+++ b/travel-blog/index.html
@@ -30,12 +30,17 @@
     </header>
     <main class="main">
       <article class="blog">
-        <h1 class="blog-title">«Жизнь во время путешествия – это мечта в чистом виде»</h1>
-        <p class="blog-subtitle">
-          Этим летом многим из нас пришлось искать альтернативу привычному отдыху. Фрилансеры из Уфы Маша Гордеева и
-          Женя Михайлов все лето путешествовали по живописным местам России на своей машине. Они поделились с нами
-          своими впечатлениями, советами и лайфхаками.
-        </p>
+        <div class="blog-header">
+          <h1 class="blog-title">«Жизнь во время путешествия – это мечта в чистом виде»</h1>
+          <p class="blog-subtitle">
+            Этим летом многим из нас пришлось искать альтернативу привычному отдыху. Фрилансеры из Уфы Маша Гордеева и
+            Женя Михайлов все лето путешествовали по живописным местам России на своей машине. Они поделились с нами
+            своими впечатлениями, советами и лайфхаками.
+          </p>
+        </div>
+        <div class="img-wrapper__big blog-main_photo">
+          <img src="./assets/1.jpg" alt="герои играют на гитаре сидя на багажнике авто" />
+        </div>
         <p class="blog-text">
           Мы с ранних лет путешествовали с родителями по России. Это всегда было для нас долгожданным событием и всегда
           доставляло море положительных эмоций. В основном мы путешествовали по Краснодарскому краю, по приморским
@@ -60,6 +65,10 @@
           машина с вместительным багажником, поэтому дискомфорта не возникало. Вещей брали по минимуму, самое
           необходимое поместилось в пару рюкзаков.
         </p>
+        <div class="img-wrapper__small"><img src="./assets/2.jpg" alt="герои обнимаются на берегу реки" /></div>
+        <div class="img-wrapper__medium"><img src="./assets/3.jpg" alt="герои cмотрят карту" /></div>
+        <div class="img-wrapper__medium"><img src="./assets/4.jpg" alt="Маша фотографирует Женю в машине" /></div>
+        <div class="img-wrapper__small"><img src="./assets/5.jpg" alt="герои пьют чай сидя на багажнике авто" /></div>
         <p class="blog-text">
           Конечно помимо еды и жилья не стоит забывать о безопасности поездки. Мы сделали туристическую страховку, так
           как сплавлялись по реке. До поездки проверили всю машину, сделали ТО, диагностику. На всякий случай, купили
@@ -76,6 +85,10 @@
           что посетим и другие места России. Хочется съездить на Алтай, посетить Владивосток, съездить на юг страны.
           Хоть мы там и были, путешествие на машине дарит совсем другие впечатления.
         </p>
+        <div class="img-wrapper__small"><img src="./assets/6.jpg" alt="Маша на фоне дороги, уходящей вдаль" /></div>
+        <div class="img-wrapper__fullscreen">
+          <img src="./assets/7.jpg" alt="Портрет Жени и Маши, сидящих в скалах" />
+        </div>
       </article>
     </main>
     <footer class="footer">
@@ -86,7 +99,7 @@
       <p>© 2021 Все права защищены</p>
     </footer>
   </body>
-  <svg>
+  <svg class="base-svg">
     <symbol id="logo">
       <path d="M0 0.346154H13.6097V3.60989H8.6151V17.6538H4.96822V3.60989H0V0.346154Z" fill="#131313" />
       <path
