--- a/floral-boutique/index.html
+++ b/floral-boutique/index.html
@@ -8,11 +8,45 @@
     <link rel="shortcut icon" href="./favicon-16.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="./assets/icons/favicon-96.png" type="image/x-icon" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Source+Sans+3&display=swap"
+      rel="stylesheet" />
+
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
-    <header class="header"></header>
-    <main class="main"></main>
-    <footer class="footer"></footer>
+  <body class="body">
+    <div class="wrapper">
+      <header class="header">
+        <nav class="nav">
+          <a class="link logo">
+            <img src="./assets/icons/logotype.svg" alt="лого" />
+          </a>
+          <ul class="list menu">
+            <li class="menu-item"><a href="" class="link menu-link">Каталог</a></li>
+            <li class="menu-item"><a href="" class="link menu-link">Подписка</a></li>
+            <li class="menu-item"><a href="" class="link menu-link">Отзывы</a></li>
+            <li class="menu-item"><a href="" class="link menu-link">Контакты</a></li>
+          </ul>
+          <a href="tel:+79239995566" class="link tel">+ 7 (923) 999 55 66</a>
+          <a href="" class="link cart">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M8.10011 10.7778V4.66667C8.10011 3.69421 8.51099 2.76158 9.24237 2.07394C9.97375 1.38631 10.9657 1 12 1C13.0344 1 14.0263 1.38631 14.7577 2.07394C15.4891 2.76158 15.9 3.69421 15.9 4.66667V10.7778M19.6959 23H4.30414C4.12431 23.0005 3.94632 22.966 3.78141 22.8985C3.61651 22.8311 3.46828 22.7322 3.3461 22.6082C3.22393 22.4841 3.13045 22.3376 3.0716 22.1778C3.01274 22.018 2.98978 21.8485 3.00417 21.68L4.10915 8.23555C4.13534 7.92864 4.28379 7.64232 4.5248 7.43385C4.76581 7.22538 5.08163 7.11012 5.40912 7.11111H18.5909C18.9184 7.11012 19.2342 7.22538 19.4752 7.43385C19.7162 7.64232 19.8647 7.92864 19.8909 8.23555L20.9958 21.68C21.0102 21.8485 20.9873 22.018 20.9284 22.1778C20.8695 22.3376 20.7761 22.4841 20.6539 22.6082C20.5317 22.7322 20.3835 22.8311 20.2186 22.8985C20.0537 22.966 19.8757 23.0005 19.6959 23Z"
+                stroke="#40393B"
+                stroke-linecap="round"
+                stroke-linejoin="round" />
+            </svg>
+          </a>
+        </nav>
+      </header>
+      <main class="main">
+        <div class="hero">
+          <img src="./assets/content/banner.jpg" alt="фото розовых пионов" />
+        </div>
+      </main>
+      <footer class="footer"></footer>
+    </div>
   </body>
 </html>
