feat: add filter panel for floral-boutique WIP JS

--- a/floral-boutique/index.html
+++ b/floral-boutique/index.html
@@ -45,6 +45,35 @@
         <div class="hero">
           <img src="./assets/content/banner.jpg" alt="фото розовых пионов" />
         </div>
+        <aside class="filter">
+          <div class="custom-select">
+            Категория
+            <select class="filter-item filter-item_category" name="category">
+              <option value="mono">Моно-букеты</option>
+              <option value="colored">Яркие цвета</option>
+              <option value="pastel">Пательные цвета</option>
+            </select>
+          </div>
+          <div class="custom-select">
+            Цветы
+            <select class="filter-item filter-item_flowers" name="flowers">
+              <option value="roses">Розы</option>
+              <option value="peonies">Пионы</option>
+              <option value="tulips">Тюльпаны</option>
+              <option value="assortie">Ассорти</option>
+            </select>
+          </div>
+          <div class="custom-select">
+            Цена
+            <select class="filter-item filter-item_price" name="price">
+              <option value="less2000">До 2000</option>
+              <option value="from2to3">От 2000 до 3000</option>
+              <option value="from3000">Более 3000</option>
+            </select>
+          </div>
+        </aside>
+        <div class="card-wrapper"></div>
+        <button class="btn btn_more">Смотреть еще</button>
       </main>
       <footer class="footer"></footer>
     </div>
