feat: add main section for floral-boutique

--- a/floral-boutique/index.html
+++ b/floral-boutique/index.html
@@ -72,10 +72,84 @@
             </select>
           </div>
         </aside>
-        <div class="card-wrapper"></div>
+        <ul class="cards list">
+          <li class="cards-item card">
+            <a href="" class="link card-link">
+              <img src="./assets/content/card/vesna.jpg" alt="" class="card-img" />
+              <h4 class="card-title">Букет &laquo;Весна&raquo;</h4>
+              <span class="card-price">1&nbsp;500&nbsp;&#8381;</span>
+              <button class="card-btn">Заказать</button></a
+            >
+          </li>
+          <li class="cards-item card">
+            <a href="" class="link card-link">
+              <img src="./assets/content/card/priznanie.jpg" alt="" class="card-img" />
+              <h4 class="card-title">Букет &laquo;Признание&raquo;</h4>
+              <span class="card-price">3&nbsp;500&nbsp;&#8381;</span>
+              <button class="card-btn">Заказать</button></a
+            >
+          </li>
+          <li class="cards-item card">
+            <a href="" class="link card-link">
+              <img src="./assets/content/card/surprise.jpg" alt="" class="card-img" />
+              <h4 class="card-title">Букет &laquo;Сюрприз&raquo;</h4>
+              <span class="card-price">2&nbsp;700&nbsp;&#8381;</span>
+              <button class="card-btn">Заказать</button></a
+            >
+          </li>
+          <li class="cards-item card">
+            <a href="" class="link card-link">
+              <img src="./assets/content/card/aprel.jpg" alt="" class="card-img" />
+              <h4 class="card-title">Букет &laquo;Апрель&raquo;</h4>
+              <span class="card-price">2&nbsp;600&nbsp;&#8381;</span>
+              <button class="card-btn">Заказать</button></a
+            >
+          </li>
+          <li class="cards-item card">
+            <a href="" class="link card-link">
+              <img src="./assets/content/card/suhocvety.jpg" alt="" class="card-img" />
+              <h4 class="card-title">Букет &laquo;Ласка&raquo;</h4>
+              <span class="card-price">1&nbsp;800&nbsp;&#8381;</span>
+              <button class="card-btn">Заказать</button></a
+            >
+          </li>
+          <li class="cards-item card">
+            <a href="" class="link card-link">
+              <img src="./assets/content/card/negnost.jpg" alt="" class="card-img" />
+              <h4 class="card-title">Букет &laquo;Нежность&raquo;</h4>
+              <span class="card-price">2&nbsp;900&nbsp;&#8381;</span>
+              <button class="card-btn">Заказать</button></a
+            >
+          </li>
+          <li class="cards-item card">
+            <a href="" class="link card-link">
+              <img src="./assets/content/card/yarkost.jpg" alt="" class="card-img" />
+              <h4 class="card-title">Букет &laquo;Яркость&raquo;</h4>
+              <span class="card-price">3&nbsp;300&nbsp;&#8381;</span>
+              <button class="card-btn">Заказать</button></a
+            >
+          </li>
+          <li class="cards-item card">
+            <a href="" class="link card-link">
+              <img src="./assets/content/card/lubov.jpg" alt="" class="card-img" />
+              <h4 class="card-title">Букет &laquo;Любовь&raquo;</h4>
+              <span class="card-price">4&nbsp;200&nbsp;&#8381;</span>
+              <button class="card-btn">Заказать</button></a
+            >
+          </li>
+          <li class="cards-item card">
+            <a href="" class="link card-link">
+              <img src="./assets/content/card/laska.jpg" alt="" class="card-img" />
+              <h4 class="card-title">Букет &laquo;Ласка&raquo;</h4>
+              <span class="card-price">14&nbsp;800&nbsp;&#8381;</span>
+              <button class="card-btn">Заказать</button></a
+            >
+          </li>
+        </ul>
         <button class="btn btn_more">Смотреть еще</button>
       </main>
       <footer class="footer"></footer>
     </div>
   </body>
+  <script src="./script.js"></script>
 </html>
