feat: add footer

--- a/floral-boutique/index.html
+++ b/floral-boutique/index.html
@@ -73,7 +73,7 @@
           </div>
         </aside>
         <ul class="cards list">
-          <li class="cards-item card">
+          <li class="cards-item card" data-mono="true">
             <a href="" class="link card-link">
               <img src="./assets/content/card/vesna.jpg" alt="" class="card-img" />
               <h4 class="card-title">Букет &laquo;Весна&raquo;</h4>
@@ -141,15 +141,46 @@
             <a href="" class="link card-link">
               <img src="./assets/content/card/laska.jpg" alt="" class="card-img" />
               <h4 class="card-title">Букет &laquo;Ласка&raquo;</h4>
-              <span class="card-price">14&nbsp;800&nbsp;&#8381;</span>
+              <span class="card-price">4&nbsp;800&nbsp;&#8381;</span>
               <button class="card-btn">Заказать</button></a
             >
           </li>
         </ul>
         <button class="btn btn_more">Смотреть еще</button>
       </main>
-      <footer class="footer"></footer>
     </div>
+    <footer class="footer">
+      <div class="wrapper">
+        <nav class="nav_footer">
+          <a class="link logo">
+            <img src="./assets/icons/logotype.svg" alt="лого" />
+          </a>
+          <ul class="list menu">
+            <li class="menu-item"><a href="" class="link menu-link">Каталог</a></li>
+            <li class="menu-item"><a href="" class="link menu-link">Подписка</a></li>
+            <li class="menu-item"><a href="" class="link menu-link">Отзывы</a></li>
+            <li class="menu-item"><a href="" class="link menu-link">Контакты</a></li>
+          </ul>
+          <ul class="list social">
+            <li class="social-item">
+              <a href="" class="link social-link"
+                ><img src="./assets/icons/instagram.svg" alt="instagram" class="social-img"
+              /></a>
+            </li>
+            <li class="social-item">
+              <a href="" class="link social-link"
+                ><img src="./assets/icons/facebook.svg" alt="facebook" class="social-img"
+              /></a>
+            </li>
+            <li class="social-item">
+              <a href="" class="link social-link"
+                ><img src="./assets/icons/pinterest.svg" alt="pinterest" class="social-img"
+              /></a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </footer>
   </body>
   <script src="./script.js"></script>
 </html>
