--- a/floral-boutique/index.html
+++ b/floral-boutique/index.html
@@ -46,26 +46,26 @@
           <img src="./assets/content/banner.jpg" alt="фото розовых пионов" />
         </div>
         <aside class="filter">
-          <div class="custom-select">
-            Категория
+          <div class="select-wrapper">
             <select class="filter-item filter-item_category" name="category">
+              <option value="category" selected>Категория</option>
               <option value="mono">Моно-букеты</option>
-              <option value="colored">Яркие цвета</option>
-              <option value="pastel">Пательные цвета</option>
+              <option value="bright">Яркие цвета</option>
+              <option value="pastel">Пастельные цвета</option>
             </select>
           </div>
-          <div class="custom-select">
-            Цветы
+          <div class="select-wrapper">
             <select class="filter-item filter-item_flowers" name="flowers">
+              <option value="flowers" selected="true">Цветы</option>
               <option value="roses">Розы</option>
               <option value="peonies">Пионы</option>
               <option value="tulips">Тюльпаны</option>
               <option value="assortie">Ассорти</option>
             </select>
           </div>
-          <div class="custom-select">
-            Цена
+          <div class="select-wrapper">
             <select class="filter-item filter-item_price" name="price">
+              <option value="price" selected>Цена</option>
               <option value="less2000">До 2000</option>
               <option value="from2to3">От 2000 до 3000</option>
               <option value="from3000">Более 3000</option>
@@ -73,7 +73,7 @@
           </div>
         </aside>
         <ul class="cards list">
-          <li class="cards-item card" data-mono="true">
+          <li class="cards-item card" data-category="mono bright" data-flowers="tulips">
             <a href="" class="link card-link">
               <img src="./assets/content/card/vesna.jpg" alt="" class="card-img" />
               <h4 class="card-title">Букет &laquo;Весна&raquo;</h4>
@@ -81,7 +81,7 @@
               <button class="card-btn">Заказать</button></a
             >
           </li>
-          <li class="cards-item card">
+          <li class="cards-item card" data-category="mono pastel" data-flowers="peonies">
             <a href="" class="link card-link">
               <img src="./assets/content/card/priznanie.jpg" alt="" class="card-img" />
               <h4 class="card-title">Букет &laquo;Признание&raquo;</h4>
@@ -89,7 +89,7 @@
               <button class="card-btn">Заказать</button></a
             >
           </li>
-          <li class="cards-item card">
+          <li class="cards-item card" data-category="pastel">
             <a href="" class="link card-link">
               <img src="./assets/content/card/surprise.jpg" alt="" class="card-img" />
               <h4 class="card-title">Букет &laquo;Сюрприз&raquo;</h4>
@@ -97,7 +97,7 @@
               <button class="card-btn">Заказать</button></a
             >
           </li>
-          <li class="cards-item card">
+          <li class="cards-item card" data-category="pastel">
             <a href="" class="link card-link">
               <img src="./assets/content/card/aprel.jpg" alt="" class="card-img" />
               <h4 class="card-title">Букет &laquo;Апрель&raquo;</h4>
@@ -105,15 +105,15 @@
               <button class="card-btn">Заказать</button></a
             >
           </li>
-          <li class="cards-item card">
+          <li class="cards-item card" data-category="pastel">
             <a href="" class="link card-link">
               <img src="./assets/content/card/suhocvety.jpg" alt="" class="card-img" />
-              <h4 class="card-title">Букет &laquo;Ласка&raquo;</h4>
+              <h4 class="card-title">Букет &laquo;Сухоцветы&raquo;</h4>
               <span class="card-price">1&nbsp;800&nbsp;&#8381;</span>
               <button class="card-btn">Заказать</button></a
             >
           </li>
-          <li class="cards-item card">
+          <li class="cards-item card" data-flowers="peonies" data-category="mono pastel">
             <a href="" class="link card-link">
               <img src="./assets/content/card/negnost.jpg" alt="" class="card-img" />
               <h4 class="card-title">Букет &laquo;Нежность&raquo;</h4>
@@ -121,7 +121,7 @@
               <button class="card-btn">Заказать</button></a
             >
           </li>
-          <li class="cards-item card">
+          <li class="cards-item card" data-category="bright">
             <a href="" class="link card-link">
               <img src="./assets/content/card/yarkost.jpg" alt="" class="card-img" />
               <h4 class="card-title">Букет &laquo;Яркость&raquo;</h4>
@@ -129,7 +129,7 @@
               <button class="card-btn">Заказать</button></a
             >
           </li>
-          <li class="cards-item card">
+          <li class="cards-item card" data-category="bright">
             <a href="" class="link card-link">
               <img src="./assets/content/card/lubov.jpg" alt="" class="card-img" />
               <h4 class="card-title">Букет &laquo;Любовь&raquo;</h4>
@@ -137,7 +137,7 @@
               <button class="card-btn">Заказать</button></a
             >
           </li>
-          <li class="cards-item card">
+          <li class="cards-item card" data-category="mono pastel" data-flowers="roses">
             <a href="" class="link card-link">
               <img src="./assets/content/card/laska.jpg" alt="" class="card-img" />
               <h4 class="card-title">Букет &laquo;Ласка&raquo;</h4>
