feat: add filter for price

--- a/floral-boutique/index.html
+++ b/floral-boutique/index.html
@@ -73,7 +73,7 @@
           </div>
         </aside>
         <ul class="cards list">
-          <li class="cards-item card" data-category="mono bright" data-flowers="tulips">
+          <li class="cards-item card" category="mono bright" data-flowers="tulips" price="less2000">
             <a href="" class="link card-link">
               <img src="./assets/content/card/vesna.jpg" alt="" class="card-img" />
               <h4 class="card-title">Букет &laquo;Весна&raquo;</h4>
@@ -81,7 +81,7 @@
               <button class="card-btn">Заказать</button></a
             >
           </li>
-          <li class="cards-item card" data-category="mono pastel" data-flowers="peonies">
+          <li class="cards-item card" category="mono pastel" data-flowers="peonies" price="from3000">
             <a href="" class="link card-link">
               <img src="./assets/content/card/priznanie.jpg" alt="" class="card-img" />
               <h4 class="card-title">Букет &laquo;Признание&raquo;</h4>
@@ -89,7 +89,7 @@
               <button class="card-btn">Заказать</button></a
             >
           </li>
-          <li class="cards-item card" data-category="pastel">
+          <li class="cards-item card" category="pastel" price="from2to3">
             <a href="" class="link card-link">
               <img src="./assets/content/card/surprise.jpg" alt="" class="card-img" />
               <h4 class="card-title">Букет &laquo;Сюрприз&raquo;</h4>
@@ -97,7 +97,7 @@
               <button class="card-btn">Заказать</button></a
             >
           </li>
-          <li class="cards-item card" data-category="pastel">
+          <li class="cards-item card" category="pastel" price="from2to3">
             <a href="" class="link card-link">
               <img src="./assets/content/card/aprel.jpg" alt="" class="card-img" />
               <h4 class="card-title">Букет &laquo;Апрель&raquo;</h4>
@@ -105,7 +105,7 @@
               <button class="card-btn">Заказать</button></a
             >
           </li>
-          <li class="cards-item card" data-category="pastel">
+          <li class="cards-item card" category="pastel" price="less2000">
             <a href="" class="link card-link">
               <img src="./assets/content/card/suhocvety.jpg" alt="" class="card-img" />
               <h4 class="card-title">Букет &laquo;Сухоцветы&raquo;</h4>
@@ -113,7 +113,7 @@
               <button class="card-btn">Заказать</button></a
             >
           </li>
-          <li class="cards-item card" data-flowers="peonies" data-category="mono pastel">
+          <li class="cards-item card" data-flowers="peonies" category="mono pastel" price="from2to3">
             <a href="" class="link card-link">
               <img src="./assets/content/card/negnost.jpg" alt="" class="card-img" />
               <h4 class="card-title">Букет &laquo;Нежность&raquo;</h4>
@@ -121,7 +121,7 @@
               <button class="card-btn">Заказать</button></a
             >
           </li>
-          <li class="cards-item card" data-category="bright">
+          <li class="cards-item card" category="bright" price="from3000">
             <a href="" class="link card-link">
               <img src="./assets/content/card/yarkost.jpg" alt="" class="card-img" />
               <h4 class="card-title">Букет &laquo;Яркость&raquo;</h4>
@@ -129,7 +129,7 @@
               <button class="card-btn">Заказать</button></a
             >
           </li>
-          <li class="cards-item card" data-category="bright">
+          <li class="cards-item card" category="bright" price="from3000">
             <a href="" class="link card-link">
               <img src="./assets/content/card/lubov.jpg" alt="" class="card-img" />
               <h4 class="card-title">Букет &laquo;Любовь&raquo;</h4>
@@ -137,7 +137,7 @@
               <button class="card-btn">Заказать</button></a
             >
           </li>
-          <li class="cards-item card" data-category="mono pastel" data-flowers="roses">
+          <li class="cards-item card" category="mono pastel" data-flowers="roses" price="from3000">
             <a href="" class="link card-link">
               <img src="./assets/content/card/laska.jpg" alt="" class="card-img" />
               <h4 class="card-title">Букет &laquo;Ласка&raquo;</h4>
