feat: add filter working together WIP filters clear

--- a/floral-boutique/index.html
+++ b/floral-boutique/index.html
@@ -48,7 +48,7 @@
         <aside class="filter">
           <div class="select-wrapper">
             <select class="filter-item filter-item_category" name="category">
-              <option value="category" selected>Категория</option>
+              <option value="all" selected>Категория</option>
               <option value="mono">Моно-букеты</option>
               <option value="bright">Яркие цвета</option>
               <option value="pastel">Пастельные цвета</option>
@@ -56,7 +56,7 @@
           </div>
           <div class="select-wrapper">
             <select class="filter-item filter-item_flowers" name="flowers">
-              <option value="flowers" selected="true">Цветы</option>
+              <option value="all" selected="true">Цветы</option>
               <option value="roses">Розы</option>
               <option value="peonies">Пионы</option>
               <option value="tulips">Тюльпаны</option>
@@ -65,7 +65,7 @@
           </div>
           <div class="select-wrapper">
             <select class="filter-item filter-item_price" name="price">
-              <option value="price" selected>Цена</option>
+              <option value="all" selected>Цена</option>
               <option value="less2000">До 2000</option>
               <option value="from2to3">От 2000 до 3000</option>
               <option value="from3000">Более 3000</option>
@@ -73,7 +73,121 @@
           </div>
         </aside>
         <ul class="cards list">
-          <li class="cards-item card" category="mono bright" data-flowers="tulips" price="less2000">
+          <li class="cards-item card" tags="mono bright tulips less2000">
+            <a href="" class="link card-link">
+              <img src="./assets/content/card/vesna.jpg" alt="" class="card-img" />
+              <h4 class="card-title">Букет &laquo;Весна&raquo;</h4>
+              <span class="card-price">1&nbsp;500&nbsp;&#8381;</span>
+              <button class="card-btn">Заказать</button></a
+            >
+          </li>
+          <li class="cards-item card" tags="mono pastel from3000 peonies">
+            <a href="" class="link card-link">
+              <img src="./assets/content/card/priznanie.jpg" alt="" class="card-img" />
+              <h4 class="card-title">Букет &laquo;Признание&raquo;</h4>
+              <span class="card-price">3&nbsp;500&nbsp;&#8381;</span>
+              <button class="card-btn">Заказать</button></a
+            >
+          </li>
+          <li class="cards-item card" tags="pastel from2to3 assortie">
+            <a href="" class="link card-link">
+              <img src="./assets/content/card/surprise.jpg" alt="" class="card-img" />
+              <h4 class="card-title">Букет &laquo;Сюрприз&raquo;</h4>
+              <span class="card-price">2&nbsp;700&nbsp;&#8381;</span>
+              <button class="card-btn">Заказать</button></a
+            >
+          </li>
+          <li class="cards-item card" tags="pastel from2to3 assortie">
+            <a href="" class="link card-link">
+              <img src="./assets/content/card/aprel.jpg" alt="" class="card-img" />
+              <h4 class="card-title">Букет &laquo;Апрель&raquo;</h4>
+              <span class="card-price">2&nbsp;600&nbsp;&#8381;</span>
+              <button class="card-btn">Заказать</button></a
+            >
+          </li>
+          <li class="cards-item card" tags="pastel less2000 assortie">
+            <a href="" class="link card-link">
+              <img src="./assets/content/card/suhocvety.jpg" alt="" class="card-img" />
+              <h4 class="card-title">Букет &laquo;Сухоцветы&raquo;</h4>
+              <span class="card-price">1&nbsp;800&nbsp;&#8381;</span>
+              <button class="card-btn">Заказать</button></a
+            >
+          </li>
+          <li class="cards-item card" tags="mono pastel from2to3 peonies">
+            <a href="" class="link card-link">
+              <img src="./assets/content/card/negnost.jpg" alt="" class="card-img" />
+              <h4 class="card-title">Букет &laquo;Нежность&raquo;</h4>
+              <span class="card-price">2&nbsp;900&nbsp;&#8381;</span>
+              <button class="card-btn">Заказать</button></a
+            >
+          </li>
+          <li class="cards-item card" tags="bright from3000 assortie">
+            <a href="" class="link card-link">
+              <img src="./assets/content/card/yarkost.jpg" alt="" class="card-img" />
+              <h4 class="card-title">Букет &laquo;Яркость&raquo;</h4>
+              <span class="card-price">3&nbsp;300&nbsp;&#8381;</span>
+              <button class="card-btn">Заказать</button></a
+            >
+          </li>
+          <li class="cards-item card" tags="bright from3000 assortie">
+            <a href="" class="link card-link">
+              <img src="./assets/content/card/lubov.jpg" alt="" class="card-img" />
+              <h4 class="card-title">Букет &laquo;Любовь&raquo;</h4>
+              <span class="card-price">4&nbsp;200&nbsp;&#8381;</span>
+              <button class="card-btn">Заказать</button></a
+            >
+          </li>
+          <li class="cards-item card" tags="mono pastel roses from3000">
+            <a href="" class="link card-link">
+              <img src="./assets/content/card/laska.jpg" alt="" class="card-img" />
+              <h4 class="card-title">Букет &laquo;Ласка&raquo;</h4>
+              <span class="card-price">4&nbsp;800&nbsp;&#8381;</span>
+              <button class="card-btn">Заказать</button></a
+            >
+          </li>
+        </ul>
+        <button class="btn btn_more">Смотреть еще</button>
+      </main>
+    </div>
+    <footer class="footer">
+      <div class="wrapper">
+        <nav class="nav_footer">
+          <a class="link logo">
+            <img src="./assets/icons/logotype.svg" alt="лого" />
+          </a>
+          <ul class="list menu">
+            <li class="menu-item"><a href="" class="link menu-link">Каталог</a></li>
+            <li class="menu-item"><a href="" class="link menu-link">Подписка</a></li>
+            <li class="menu-item"><a href="" class="link menu-link">Отзывы</a></li>
+            <li class="menu-item"><a href="" class="link menu-link">Контакты</a></li>
+          </ul>
+          <ul class="list social">
+            <li class="social-item">
+              <a href="" class="link social-link"
+                ><img src="./assets/icons/instagram.svg" alt="instagram" class="social-img"
+              /></a>
+            </li>
+            <li class="social-item">
+              <a href="" class="link social-link"
+                ><img src="./assets/icons/facebook.svg" alt="facebook" class="social-img"
+              /></a>
+            </li>
+            <li class="social-item">
+              <a href="" class="link social-link"
+                ><img src="./assets/icons/pinterest.svg" alt="pinterest" class="social-img"
+              /></a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </footer>
+  </body>
+  <script src="./script.js"></script>
+</html>
+
+<!--  -->
+
+<!--  <li class="cards-item card" category="mono bright" data-flowers="tulips" price="less2000">
             <a href="" class="link card-link">
               <img src="./assets/content/card/vesna.jpg" alt="" class="card-img" />
               <h4 class="card-title">Букет &laquo;Весна&raquo;</h4>
@@ -144,43 +258,4 @@
               <span class="card-price">4&nbsp;800&nbsp;&#8381;</span>
               <button class="card-btn">Заказать</button></a
             >
-          </li>
-        </ul>
-        <button class="btn btn_more">Смотреть еще</button>
-      </main>
-    </div>
-    <footer class="footer">
-      <div class="wrapper">
-        <nav class="nav_footer">
-          <a class="link logo">
-            <img src="./assets/icons/logotype.svg" alt="лого" />
-          </a>
-          <ul class="list menu">
-            <li class="menu-item"><a href="" class="link menu-link">Каталог</a></li>
-            <li class="menu-item"><a href="" class="link menu-link">Подписка</a></li>
-            <li class="menu-item"><a href="" class="link menu-link">Отзывы</a></li>
-            <li class="menu-item"><a href="" class="link menu-link">Контакты</a></li>
-          </ul>
-          <ul class="list social">
-            <li class="social-item">
-              <a href="" class="link social-link"
-                ><img src="./assets/icons/instagram.svg" alt="instagram" class="social-img"
-              /></a>
-            </li>
-            <li class="social-item">
-              <a href="" class="link social-link"
-                ><img src="./assets/icons/facebook.svg" alt="facebook" class="social-img"
-              /></a>
-            </li>
-            <li class="social-item">
-              <a href="" class="link social-link"
-                ><img src="./assets/icons/pinterest.svg" alt="pinterest" class="social-img"
-              /></a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </footer>
-  </body>
-  <script src="./script.js"></script>
-</html>
+          </li> -->
