feat: add animation for sign-in btn furly-project

--- a/furly/index.html
+++ b/furly/index.html
@@ -34,11 +34,12 @@
         </ul>
         <ul class="list accaunt">
           <li class="accaunt-item">
-            <a href="" class="link accaunt-link">
-              <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <a href="" class="link accaunt-link accaunt-link__sign-in">
+              <svg width="26" height="26" viewBox="0 0 26 26" xmlns="http://www.w3.org/2000/svg">
+                <path d="M20.9998 4.00001V22H7.96274V4.00001H20.9998Z" stroke="#211E1D" stroke-linecap="square" />
                 <path
-                  d="M12.7034 16.375L16.259 13M16.259 13L12.7034 9.62501M16.259 13H4.99976M20.9998 4.00001V22H7.96274V4.00001H20.9998Z"
-                  stroke="#211E1D"
+                  class="entrance"
+                  d="M12.7034 16.375L16.259 13M16.259 13L12.7034 9.62501M16.259 13H4.99976"
                   stroke-linecap="square" />
               </svg>
             </a>
