feat: add animation for cart furly-project

--- a/furly/index.html
+++ b/furly/index.html
@@ -55,12 +55,14 @@
             </a>
           </li>
           <li class="accaunt-item">
-            <a href="" class="link accaunt-link">
+            <a href="" class="link accaunt-link accaunt-link__cart">
               <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
-                  d="M15.2499 4L21.9999 11.2M21.9999 11.2L20.4564 22H5.54338L3.99988 11.2M21.9999 11.2H3.99988M3.99988 11.2L10.7499 4"
+                  d="M21.9999 11.2L20.4564 22H5.54338L3.99988 11.2M21.9999 11.2H3.99988"
                   stroke="#211E1D"
                   stroke-linecap="square" />
+                <path class="firstlap" d="M15.2499 4L21.9999 11.2" stroke="#211E1D" stroke-linecap="square" />
+                <path class="seclap" d="M3.99988 11.2L10.7499 4" stroke="#211E1D" stroke-linecap="square" />
               </svg>
             </a>
           </li>
